force-app/main/default/objects/Insurance_Claim__c/Insurance_Claim__c.object-meta.xml
<CustomObject>
    <label>Insurance Claim</label>
    <pluralLabel>Insurance Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <displayFormat>CLM-{00000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>