force-app/main/default/objects/Insurance_Claim__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <label>Claim Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>