force-app/main/default/objects/Insurance_Claim__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>